@@ -1,3 +1,8 @@
+2014-02-04  Marek Polacek  <polacek@redhat.com>
+
+	PR c/60036
+	* gcc.dg/pr60036.c: New test.
+
 2014-02-04  Markus Trippelsdorf  <markus@trippelsdorf.de>
 
 	PR ipa/60058
